@@ -1,5 +1,5 @@
 /*
- * gnu.currencygen.Main Copyright (C) 2004 Free Software Foundation,
+ * gnu.supplementgen.Main Copyright (C) 2004 Free Software Foundation,
  * Inc.
  *
  * This file is part of GNU Classpath.
@@ -17,7 +17,7 @@
  * GNU Classpath; see the file COPYING. If not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
  */
-package gnu.currencygen;
+package gnu.supplementgen;
 
 import org.xml.sax.Attributes;
 import org.xml.sax.helpers.DefaultHandler;
@@ -71,8 +71,8 @@ public class Main
   static void printVersion()
   {
     System.out
-      .println(" This is the LDML to GNU Classpath converter (currency part)");
-    System.out.println("   Copyright (C) 2004 The Free Software Foundation.");
+      .println(" This is the LDML to GNU Classpath converter (supplementary data part)");
+    System.out.println("   Copyright (C) 2004, 2008 The Free Software Foundation.");
     System.out.println();
   }
 }
@@ -197,10 +197,10 @@ class SupplementalHandler extends DefaultHandler
   public void startDocument()
   {
     output
-      .println("# This document is automatically generated by gnu.currencygen");
+      .println("# This document is automatically generated by gnu.supplementgen");
     output.println();
     wOutput
-      .println("# This document is automatically generated by gnu.currencygen");
+      .println("# This document is automatically generated by gnu.supplementgen");
     wOutput.println();
     state = STATE_ZERO;
     ignoreLevel = 0;
