@@ -1,5 +1,15 @@
 2008-07-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	* Makefile.am: Replace currencygen with supplementgen.
+	* bin/currencygen.in: Renamed to...
+	* bin/supplementgen.in: ...this.
+	* configure.ac: Replace currencygen with supplementgen.
+	* src/gnu/currencygen/Main.java: Renamed to...
+	* src/gnu/supplementgen/Main.java: ...this and
+	updated version/copyright output.
+
+2008-07-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	* src/gnu/currencygen/Main.java:
 	Output week data to weeks.properties.
 	(SupplementalHandler.SupplementalHandler(PrintWriter,PrintWriter)):
